# VNC-Client-for-maTouch

./: platformio.ini  readme.md
src/: VNC_GFX.h  main.cpp  touch.h
ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c
ui/src/images/: ui_img_1625894308.c  ui_img_1_png.c  ui_img_240x60_png.c  ui_img_781982824.c  ui_img_arm_hour_png.c  ui_img_arm_minute_png.c  ui_img_arm_second_png.c  ui_img_clock2_png.c  ui_img_clock_png.c  ui_img_watchface_png.c
ui/src/screens/: ui_Screen1.c  ui_Screen2.c
